Main grid layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/login"
     android:orientation="vertical"
+    android:padding="8dp"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_centerInParent="true">
 
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <!--circle image view-->
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/main_circleImageView_profile"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:src="@drawable/person"/>
+
+            <!--email address-->
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <EditText
+                    android:id="@+id/main_editText_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:background="@color/white"
+                    android:textColor="@color/black"
+                    android:drawableLeft="@drawable/email_22"
+                    android:hint="@string/email"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <!--password address-->
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <EditText
+                    android:id="@+id/main_editText_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:background="@color/white"
+                    android:textColor="@color/black"
+                    android:drawableLeft="@drawable/password_22"
+                    android:hint="@string/passwd"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:inputType="textPassword"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <!--login register-->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <!--login-->
+                <Button
+                    android:id="@+id/main_button_login"
+                    android:layout_width="180dp"
+                    android:layout_height="50dp"
+                    android:text="@string/login"
+                    android:background="@color/black"
+                    android:textColor="@color/white"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    />
+                <!--login-->
+                <Button
+                    android:id="@+id/main_button_submit"
+                    android:layout_width="180dp"
+                    android:layout_height="50dp"
+                    android:text="@string/register"
+                    android:background="@color/black"
+                    android:textColor="@color/white"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    />
+            </LinearLayout>
+
+            <!--telephone googlesignin-->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <!--telephone-->
+                <Button
+                    android:id="@+id/main_button_telephone"
+                    android:layout_width="180dp"
+                    android:layout_height="50dp"
+                    android:text="@string/telephone"
+                    android:background="@color/blue"
+                    android:textColor="@color/white"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    />
+
+                <!--google sign in-->
+                <Button
+                    android:id="@+id/main_button_googlesign"
+                    android:layout_width="180dp"
+                    android:layout_height="50dp"
+                    android:text="@string/google_signin"
+                    android:background="@color/blue"
+                    android:textColor="@color/white"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    />
+            </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
+</RelativeLayout>
