--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,7 +7,7 @@
     tools:context=".RegisterActivity">
 
     <ScrollView
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true">
 
@@ -16,10 +16,43 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
+       <de.hdodenhof.circleimageview.CircleImageView
+           android:id="@+id/register_circleImageView"
+           android:layout_width="match_parent"
+           android:layout_height="100dp"
+           android:src="@drawable/person"
+           android:layout_marginTop="12dp"/>
+
+        <!--email ınput-->
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="ADMIN" />
+            android:layout_height="wrap_content">
+            <EditText
+                android:id="@+id/register_editText_EmailAddress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/email"
+                android:background="@color/white"
+                android:textColor="@color/black"
+                android:drawableLeft="@drawable/email_22"
+                android:layout_marginTop="12dp"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <!--password ınput-->
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText
+                android:id="@+id/register_editText_Password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/passwd"
+                android:background="@color/white"
+                android:textColor="@color/black"
+                android:drawableLeft="@drawable/password_22"
+                android:inputType="textPassword"
+                android:layout_marginTop="12dp"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
     </ScrollView>
