--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -26,34 +26,32 @@
         <!--email ınput-->
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <EditText
+            android:layout_height="wrap_content"
+            android:hint="@string/email"
+            app:endIconCheckable="true"
+            app:endIconDrawable="@drawable/email_22"
+            app:endIconMode="custom"
+            app:endIconTint="#0000FF"
+            app:boxBackgroundColor="@color/white">
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/register_editText_EmailAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/email"
-                android:background="@color/white"
-                android:textColor="@color/black"
-                android:drawableLeft="@drawable/email_22"
-                android:layout_marginTop="12dp"
-                android:padding="10dp"/>
+          />
         </com.google.android.material.textfield.TextInputLayout>
 
         <!--password ınput-->
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <EditText
+            android:layout_height="wrap_content"
+            android:hint="@string/passwd"
+            app:boxBackgroundColor="@color/white"
+            app:endIconMode="password_toggle"
+            app:endIconTint="#0000FF">
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/register_editText_Password"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/passwd"
-                android:background="@color/white"
-                android:textColor="@color/black"
-                android:drawableLeft="@drawable/password_22"
-                android:inputType="textPassword"
-                android:layout_marginTop="12dp"
-                android:padding="10dp"/>
+                android:layout_height="wrap_content"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <!--button:transparent-->
