--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,11 @@
     android:layout_height="match_parent"
     android:background="@drawable/background"
     android:orientation="vertical"
-    android:padding="8dp"
     tools:context=".MainActivity">
     <!--640-->
 
     <ScrollView
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true">
 
@@ -62,37 +61,36 @@
                     android:paddingRight="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginLeft="10dp"
-                    android:inputType="textPassword"/>
+                    android:inputType="textPassword"
+                    android:layout_marginBottom="10dp"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <!--login register-->
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="300dp"
+                android:layout_height="150dp"
                 android:orientation="horizontal">
 
                 <!--login-->
                 <Button
                     android:id="@+id/main_button_login"
-                    android:layout_width="180dp"
-                    android:layout_height="50dp"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
                     android:text="@string/login"
                     android:background="@color/black"
                     android:textColor="@color/white"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
-                    />
+                    android:layout_marginRight="5dp"/>
 
                 <!--register-->
-                <Button
+                <TextView
                     android:id="@+id/main_button_register"
-                    android:layout_width="180dp"
-                    android:layout_height="50dp"
+                    android:layout_width="150dp"
+                    android:layout_height="40dp"
                     android:text="@string/register"
                     android:background="@color/black"
                     android:textColor="@color/white"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="-12dp"
+                    android:layout_marginRight="5dp"
                     />
             </LinearLayout>
 
