--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -18,10 +18,36 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
+            <!--circle image view-->
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/main_circleImageView_profile"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="ADMIN" />
+                android:layout_height="100dp"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/person"/>
+
+            <TextView
+                android:id="@+id/userEmailAddressId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:background="@color/black"
+                android:textColor="#ffffff"
+                android:gravity="center"
+                android:padding="8dp"
+                android:text="Email"
+                android:layout_marginTop="150dp"
+                />
+
+            <Button
+                android:id="@+id/signOutButtonId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:text="Google Çıkış"
+                android:layout_marginTop="200dp"
+                />
 
         </RelativeLayout>
     </ScrollView>
