--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -7,6 +7,10 @@
     android:orientation="vertical"
     tools:context=".AdminActivity">
 
+    <include
+        android:id="@+id/myToolBarId"
+        layout="@layout/my_toolbar"/>
+
 
     <ScrollView
         android:layout_width="match_parent"
