--- a/app/src/main/res/menu/admin_menu.xml
+++ b/app/src/main/res/menu/admin_menu.xml
@@ -13,6 +13,10 @@
     android:title="Ayarlar"/>
 
     <item
+        android:id="@+id/adminMenuChronometreId"
+        android:title="Kronometre"/>
+
+    <item
         android:id="@+id/adminMenuLogoutId"
         android:title="Çıkış"/>
 </menu>
