--- a/app/src/main/res/layout/activity_vki.xml
+++ b/app/src/main/res/layout/activity_vki.xml
@@ -33,6 +33,7 @@
 
     <!-- 2.Satır -->
     <TextView
+        android:id="@+id/textViewVkiBoyId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_row="1"
@@ -119,7 +120,7 @@
         android:layout_gravity="center_vertical|left"/>
 
     <TextView
-        android:id="@+id/textVkiDurumId"
+        android:id="@+id/textViewVkiDurumId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_row="5"
