--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -36,8 +36,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/register_editText_EmailAddress"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-          />
+                android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <!--password ınput-->
