--- a/app/src/main/res/menu/admin_menu.xml
+++ b/app/src/main/res/menu/admin_menu.xml
@@ -21,6 +21,10 @@
         android:title="Vucut Kitle Index"/>
 
     <item
+        android:id="@+id/adminMenuInfoId"
+        android:title="Sistem Bilgileri"/>
+
+    <item
         android:id="@+id/adminMenuLogoutId"
         android:title="Çıkış"/>
 </menu>
