--- a/app/src/main/res/menu/admin_menu.xml
+++ b/app/src/main/res/menu/admin_menu.xml
@@ -9,8 +9,8 @@
         app:showAsAction="ifRoom"/>
 
     <item
-    android:id="@+id/adminMenuSettingId"
-    android:title="Ayarlar"/>
+    android:id="@+id/adminMenuWifiId"
+    android:title="Wifi"/>
 
     <item
         android:id="@+id/adminMenuPersonId"
