--- a/app/src/main/res/menu/admin_menu.xml
+++ b/app/src/main/res/menu/admin_menu.xml
@@ -33,6 +33,10 @@
         android:title="Sistem Bilgileri"/>
 
     <item
+        android:id="@+id/adminMenuMailSendId"
+        android:title="Mail bilgileri"/>
+
+    <item
         android:id="@+id/adminMenuLogoutId"
         android:title="Çıkış"/>
 </menu>
