Mail Send Backend

--- a/app/src/main/res/layout/activity_email_send.xml
+++ b/app/src/main/res/layout/activity_email_send.xml
@@ -60,6 +60,7 @@
         android:textColor="@color/black"/>
 
     <Button
+        android:id="@+id/buttonSubmitEmailId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/editTextContentId"
